--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     ],
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
+    "import/prefer-default-export": "off",
     "react/react-in-jsx-scope": "off",
     "import/extensions": [
       "error",
